--- a/package.json
+++ b/package.json
@@ -7,22 +7,24 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "build": "react-scripts build",
-    "start": "react-scripts start"
+    "build": "craco build",
+    "start": "craco start"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@craco/craco": "^6.0.0",
     "gh-pages": "^3.1.0",
-    "prettier": "^2.0.5",
-    "react-scripts": "^3.4.1"
+    "prettier": "^2.2.1",
+    "react-scripts": "^4.0.1",
+    "workerize-loader": "^1.3.0"
   },
   "dependencies": {
-    "bulma": "^0.9.0",
-    "d3": "^5.16.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "bulma": "^0.9.1",
+    "d3": "^6.3.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   },
   "browserslist": {
     "production": [
