--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
   "dependencies": {
     "bulma": "^0.9.1",
     "d3": "^6.3.1",
+    "density-clustering": "^1.3.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "tsne-js": "^1.0.3"
   },
   "browserslist": {
     "production": [
