--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "workerize-loader": "^1.3.0"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.5.0",
     "bulma": "^0.9.1",
     "d3": "^6.3.1",
     "density-clustering": "^1.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
     "tsne-js": "^1.0.3"
   },
   "browserslist": {
