--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "workerize-loader": "^1.3.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.1",
     "@reduxjs/toolkit": "^1.5.0",
     "bulma": "^0.9.1",
     "d3": "^6.3.1",
